[gd_scene load_steps=15 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://src/screens/ParallaxBackground.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/background/MainMenu/1.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/background/MainMenu/2.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/background/tile.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/background/MainMenu/5.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/background/MainMenu/4.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/background/MainMenu/3.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/TrobusExpandedPersonalUse.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://src/screens/Scoreboard.gd" type="Script" id=10]
[ext_resource path="res://src/screens/LineEdit.gd" type="Script" id=11]
[ext_resource path="res://assets/audio/background/Press Fuse - French Fuse.mp3" type="AudioStream" id=12]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 9 )

[node name="Control" type="Node"]
script = ExtResource( 10 )

[node name="Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Background" type="Control" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="Container/Background"]
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Container/Background/ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1728, 0 )

[node name="Sprite" type="Sprite" parent="Container/Background/ParallaxBackground/ParallaxLayer"]
scale = Vector2( 3, 3.35 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Container/Background/ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1728, 0 )

[node name="Sprite" type="Sprite" parent="Container/Background/ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 3, 3.35 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Container/Background/ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 1728, 0 )

[node name="Sprite" type="Sprite" parent="Container/Background/ParallaxBackground/ParallaxLayer3"]
scale = Vector2( 3, 3.35 )
texture = ExtResource( 8 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Container/Background/ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )
motion_mirroring = Vector2( 1728, 0 )

[node name="Sprite" type="Sprite" parent="Container/Background/ParallaxBackground/ParallaxLayer4"]
scale = Vector2( 3, 3.35 )
texture = ExtResource( 7 )
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Container/Background/ParallaxBackground"]
motion_mirroring = Vector2( 1728, 0 )

[node name="Sprite" type="Sprite" parent="Container/Background/ParallaxBackground/ParallaxLayer5"]
scale = Vector2( 3, 3.35 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Container/Background/ParallaxBackground"]
motion_scale = Vector2( 6, 1 )
motion_mirroring = Vector2( 1958.4, 0 )

[node name="Sprite" type="Sprite" parent="Container/Background/ParallaxBackground/ParallaxLayer6"]
scale = Vector2( 3.4, 3.3 )
texture = ExtResource( 5 )
centered = false

[node name="Title" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -394.0
margin_top = 45.0
margin_right = 395.0
margin_bottom = 111.0
theme = ExtResource( 1 )
text = "Leaderboard"

[node name="Level" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -210.0
margin_top = 108.0
margin_right = 231.0
margin_bottom = 174.0
theme = ExtResource( 1 )
text = "Level 1"

[node name="EnterName" type="VBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -523.5
margin_top = -72.0
margin_right = 523.5
margin_bottom = 72.0

[node name="Label" type="Label" parent="Container/EnterName"]
margin_right = 1047.0
margin_bottom = 66.0
theme = ExtResource( 1 )
text = "Ingresar Nombre:"

[node name="LineEdit" type="LineEdit" parent="Container/EnterName"]
margin_left = 374.0
margin_top = 70.0
margin_right = 672.0
margin_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 1 )
max_length = 3
script = ExtResource( 11 )

[node name="Buttons" type="VBoxContainer" parent="Container"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -105.0
margin_right = 159.0
mouse_filter = 2
theme = SubResource( 1 )
alignment = 1

[node name="Back" type="Button" parent="Container/Buttons"]
margin_right = 318.0
margin_bottom = 105.0
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Back"

[node name="LeaderBoard" type="VBoxContainer" parent="Container"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -305.0
margin_top = 227.0
margin_right = 350.0
margin_bottom = -222.0

[node name="HBoxContainer" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_right = 655.0
margin_bottom = 44.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer"]
margin_right = 202.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer"]
margin_left = 345.0
margin_right = 515.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "Time"

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_top = 90.0
margin_right = 655.0
margin_bottom = 181.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer2"]
margin_top = 23.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer2"]
margin_left = 329.0
margin_right = 329.0
margin_bottom = 91.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "
"

[node name="HBoxContainer3" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_top = 185.0
margin_right = 655.0
margin_bottom = 229.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer3"]
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer3"]
margin_left = 329.0
margin_right = 329.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_top = 275.0
margin_right = 655.0
margin_bottom = 319.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer4"]
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer4"]
margin_left = 329.0
margin_right = 329.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_top = 365.0
margin_right = 655.0
margin_bottom = 409.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer5"]
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer5"]
margin_left = 329.0
margin_right = 329.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )

[node name="HBoxContainer6" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_top = 455.0
margin_right = 655.0
margin_bottom = 499.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer6"]
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer6"]
margin_left = 329.0
margin_right = 329.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )

[node name="HBoxContainer7" type="HBoxContainer" parent="Container/LeaderBoard"]
margin_top = 545.0
margin_right = 655.0
margin_bottom = 589.0
size_flags_vertical = 2
size_flags_stretch_ratio = 3.46

[node name="Name" type="Label" parent="Container/LeaderBoard/HBoxContainer7"]
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )

[node name="Time" type="Label" parent="Container/LeaderBoard/HBoxContainer7"]
margin_left = 329.0
margin_right = 329.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
bus = "music"

[connection signal="text_entered" from="Container/EnterName/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Container/Buttons/Back" to="." method="_on_Back_pressed"]
